# Lily

./: .gitignore  AGENTS.md  Makefile  README.md  tsconfig.json  vite.config.ts
backend/: Cargo.toml  tauri.conf.json
backend/.cargo/: config.toml
backend/icons/: generate-icons.sh  icon.icns
backend/src/: docx_ops.rs  lily_file.rs  main.rs  questionnaire.rs  seed_questionnaire.json  settings.rs  sidecar.rs
frontend/: biome.json  dev.ts  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/__tests__/: path.test.ts  (+3 more)
resources/icons/: generate-icons.sh
src/: App.tsx
src/components/: ClientHub.tsx  DirectoryPicker.tsx  TemplatePicker.tsx  VariableEditor.tsx
src/stores/: settingsStore.ts  workflowStore.ts
src/styles/: index.css
src/types/: index.ts
wiki/01_Introduction/: 00.01_About Lily.md  00.02_Installation.md  00.03_Quick Start.md
wiki/02_Client_Management/: 01.00_Working with Clients.md  01.01_The Client Hub.md  01.02_Contacts.md  01.03_The Questionnaire.md
wiki/03_Documents/: 02.00_Choosing a Template.md  02.01_Filling in Variables.md  02.02_The Document Preview.md  02.03_Saving and Renaming.md
wiki/04_Templates/: 03.00_Understanding Templates.md  03.01_Template Authoring.md  03.02_Variable Schemas.md
wiki/05_Pipeline/: 04.00_The Pipeline.md  04.01_Managing Questionnaires.md
wiki/06_Settings/: 05.00_App Settings.md
wiki/07_Development/: 06.01_Developer Quick Start.md  06.02_Building and Distribution.md
wiki/08_FAQ_and_Support/: 07.00_FAQ.md  07.01_Troubleshooting.md
(+47 files in other folders)
