[package]
name = "lily"
version = "0.3.3"
edition = "2021"

[build-dependencies]
tauri-build = { version = "^2.0.0", features = [] }

[dependencies]
tauri = { version = "^2.0.0", features = [] }
tauri-plugin-fs = "^2.0.0"
tauri-plugin-dialog = "^2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
docx-rs = "0.4"
zip = "2.0"
xml-rs = "0.8"
dirs = "6.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
